Aprimorado o mapeamento de informações obtidas pela API externa com dados internos fornecidos pelo Scout